# web_template

./: .envrc  .gitignore  .oxfmtrc.json  .oxlintrc.json  Cargo.toml  Dockerfile  README.md  cargo-generate.toml  devenv.nix  docker-compose.yml  nginx.conf  package-lock.json  package.json  renovate.json
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: auto-merge-release.yml  auto-merge-release.yml.liquid  auto-merge.yml  auto-merge.yml.liquid  checks.yml  checks.yml.liquid  create-release.yml  create-release.yml.liquid  release-trigger.yml  release-trigger.yml.liquid  release.yml.liquid  tests.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/derive-util/: Cargo.toml
backend/derive-util/src/: lib.rs
backend/entity/: Cargo.toml
backend/entity/src/entities/: dummy.rs  mod.rs  prelude.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20250301_215149_create_key_table.rs
backend/src/: config.rs  cors.rs  dummy.rs  error.rs  frontend.rs  lib.rs  main.rs
backend/src/db/: dummy.rs  mod.rs  pool.rs
backend/src/db/tables/: dummy.rs  mod.rs
backend/tests/: common.rs  health.rs
frontend/: Dockerfile  openapi-ts.config.ts  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/lib/backend/: config.ts  dummy.svelte.ts
frontend/src/lib/client/: client.gen.ts  index.ts  msw.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/lib/client/client/: client.gen.ts  index.ts  types.gen.ts  utils.gen.ts
frontend/src/lib/client/core/: bodySerializer.gen.ts  params.gen.ts  pathSerializer.gen.ts  serverSentEvents.gen.ts  types.gen.ts  utils.gen.ts
frontend/src/routes/: +page.svelte
frontend/src/tests/_helpers/: e2e-fixture.ts  layout.ts  session.ts
frontend/src/tests/e2e/: overview.spec.ts
frontend/src/tests/mocks/: setup.ts
frontend/src/tests/mocks/e2e/: data.ts  handlers.ts
frontend/src/tests/setup/: vitest-setup-sveltekit.ts  vitest-setup.ts
frontend/src/tests/unit/: hooks.server.test.ts
