[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
centaurus = { version = "0.4.7", features = [
  "axum",
  "logging",
  "sea-orm",
  "uuid",
] }
uuid = { version = "1.19.0", features = ["v4"] }
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
axum = { version = "0.8.8", features = ["macros", "ws", "tracing"] }
axum-extra = { version = "0.12.5", features = ["cookie", "typed-header"] }
tracing = "0.1.44"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tokio = { version = "1.48.0", features = ["signal"] }
http = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
figment = { version = "0.10.19", features = ["env"] }
hyper-util = { version = "0.1.19", features = ["client-legacy"] }

[[bin]]
name = "backend"
path = "src/main.rs"
